syntax = "proto3";
package payment;

service PaymentService {
    rpc CreatePayment (CreatePaymentRequest) returns (PaymentResponse);
}

message Payment {
    string id = 1;
    string title = 2;
    double amount = 3;
}

message PaymentResponse {
    Payment payment = 1;
}

message CreatePaymentRequest {
    string title = 2;
    double amount = 3;
}
